--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "enzyme-adapter-react-16": "^1.12.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-hooks-testing-library": "^0.5.0",
     "react-scripts": "3.0.0",
     "react-test-renderer": "^16.8.6"
   },
